# tend-attend-be

./: .dockerignore  .flake8  .gitignore  CLAUDE.md  README.md  mypy.ini  tend-attend-be.code-workspace
.github/: dependabot.yml
.github/workflows/: cd-ml-server.yml  cd-qrcode.yml  ci-ml-server.yml  ci-qrcode.yml  ci-server.yml  ci-test.yml  release-pr.yml
docker/ml-server/: Dockerfile
docker/qrcode-server/: Dockerfile
docker/server/: Dockerfile
scripts/: build.sh  build_server.sh  deploy.sh  export-requirements.sh  export_requirements.sh  poe-all.sh  poe_all.sh  poetry_all.sh  setup.sh
ta-api/: .env.template  app.env  main.py  pyproject.toml
ta-api/src/: main.py
ta-api/src/ta_api/: constants.py  dependencies.py
ta-api/src/ta_api/routers/: account.py  admin.py  auth.py  event.py  verify.py
ta-api/src/ta_api/routers/admin_router/: migration.py
ta-cli/: pyproject.toml
ta-cli/src/ta_cli/: utilities.py
ta-cli/src/ta_cli/typers/: db_mock.py
ta-core/: pyproject.toml
ta-core/src/alembic/: env.py
ta-core/src/ta_core/constants/: constants.py
ta-core/src/ta_core/domain/entities/: account.py  base.py  event.py
ta-core/src/ta_core/domain/repositories/: base.py
ta-core/src/ta_core/domain/use_case/: base.py
ta-core/src/ta_core/domain/usecase/: base.py
ta-core/src/ta_core/dtos/: account.py
ta-core/src/ta_core/dtos/ml_dto/: account.py  event.py  forecast.py
ta-core/src/ta_core/error/: error_code.py
ta-core/src/ta_core/features/: account.py  event.py
ta-core/src/ta_core/infrastructure/db/: sharding.py  transaction.py
ta-core/src/ta_core/infrastructure/sqlalchemy/: unit_of_work.py
ta-core/src/ta_core/infrastructure/sqlalchemy/models/sequences/: base.py
ta-core/src/ta_core/infrastructure/sqlalchemy/models/shards/: base.py  event.py
ta-core/src/ta_core/infrastructure/sqlalchemy/repositories/: account.py  base.py  event.py  verify.py
ta-core/src/ta_core/use_case/: account.py  auth.py  develop.py  event.py  verify.py
ta-core/src/ta_core/usecase/: account.py  auth.py  develop.py  event.py  verify.py
ta-core/src/ta_core/utils/: rfc5545.py  smtp.py
ta-core/ta_core/domain/repositories/: base.py
ta-core/ta_core/dtos/: base.py
ta-core/ta_core/infrastructure/sqlalchemy/models/commons/: account.py  base.py
ta-core/ta_core/infrastructure/sqlalchemy/models/sequences/: base.py
ta-core/ta_core/use_case/: account.py  auth.py  develop.py  event.py  verify.py
ta-core/tests/: conftest.py  db_sharding.py
ta-core/tests/infrastructure/sqlalchemy/repositories/: test_account.py  test_event.py
ta-core/tests/utils/: test_rfc5545.py
ta-ml/: pyproject.toml
ta-ml/src/: gunicorn.conf.py  main.py
ta-ml/src/ta_ml/domain/entities/: account.py  event.py
ta-ml/src/ta_ml/dtos/: account.py  event.py
ta-ml/src/ta_ml/features/: event.py
ta-ml/src/ta_ml/forecast/: attendance.py
ta-ml/src/ta_ml/formatters/: attendance.py
ta-ml/ta_ml/: types.py
ta-ml/ta_ml/api/: timesfm.py
ta-ml/ta_ml/constants/: timesfm.py
ta-ml/ta_ml/domain/entities/: base.py
ta-ml/ta_ml/dtos/: account.py  forecast.py
ta-ml/ta_ml/forecast/: attendance.py
ta-ml/ta_ml/formatters/: attendance.py
ta-ml/ta_ml/utils/: datetime.py
ta-qrcode/: eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
ta-qrcode/src/: index.test.ts  index.ts  qrCodeGenerator.test.ts  qrCodeGenerator.ts
terraform/: provider.env
terraform/environments/prod/: .terraform.lock.hcl  api_gateway.tf  aurora.tf  backend.tf  cloud_run.tf  cloudfront.tf  ecr.tf  gar.tf  gha.tf  lambda.tf  op.tf  provider.tf  route53.tf  secrets_manager.tf  security_group.tf  variables.tf  vpc.tf
terraform/modules/api_gateway/: main.tf  variables.tf
terraform/modules/aurora/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudfront/: main.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/gar/: main.tf  outputs.tf  provider.tf  variables.tf
terraform/modules/gha/: aws.tf  google.tf  main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: iam.tf  main.tf  outputs.tf  qrcode.tf  server.tf  variables.tf
terraform/modules/op/: main.tf  outputs.tf  provider.tf  variables.tf
terraform/modules/route53/: main.tf  outputs.tf  provider.tf
terraform/modules/secrets_manager/: main.tf  outputs.tf
terraform/modules/security_group/private/: main.tf  outputs.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
