[project]
name = "ta-api"
version = "0.1.0"
description = ""
authors = [
    {name = "himura467",email = "mitarashidango0927@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "mangum (>=0.19.0,<0.20.0)",
    "ta-core @ ../ta-core"
]

[tool.poetry]
packages = [{include = "ta_api", from = "src"}]

[tool.poetry.dependencies]
ta-core = {develop = true}

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
poethepoet = "^0.34.0"
pytest = "^8.3.5"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
mypy = "mypy --config-file ../mypy.ini src tests"
flake8 = "flake8 --config ../.flake8 src tests"
black = "black src tests"
isort = "isort src tests"
lint = ["mypy", "flake8"]
format = ["black", "isort"]
test = "pytest tests"
