[project]
name = "ta-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "himura467",email = "mitarashidango0927@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "typer[all] (>=0.15.4,<0.16.0)",
    "ta-core @ file:///Users/himura/Desktop/tend-attend/tend-attend-be/ta-core"
]

[tool.poetry]
packages = [{include = "ta_cli", from = "src"}]

[tool.poetry.dependencies]
ta-core = {develop = true}

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
poethepoet = "^0.34.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
db-migration-print-ddl = "python src/main.py db-migration print-ddl"
db-migration-migrate = "python src/main.py db-migration migrate"
db-mock-attendance-log = "python src/main.py db-mock attendance-log"
mypy = "mypy --config-file ../mypy.ini src tests"
flake8 = "flake8 --config ../.flake8 src tests"
black = "black src tests"
isort = "isort src tests"
lint = ["mypy", "flake8"]
format = ["black", "isort"]
test = "pytest tests"
