[project]
name = "ta-core"
version = "0.1.0"
description = ""
authors = [
    {name = "himura467",email = "mitarashidango0927@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)",
    "aws-advanced-python-wrapper (>=1.2.0,<2.0.0)",
    "uuid6 (>=2024.7.10,<2025.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "ta_core", from = "src"}]

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
poethepoet = "^0.34.0"
pytest = "^8.4.1"
pytest-asyncio = "^0.26.0"
pytest-mysql = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
mypy = "mypy --config-file ../mypy.ini src tests"
flake8 = "flake8 --config ../.flake8 src tests"
black = "black src tests"
isort = "isort src tests"
lint = ["mypy", "flake8"]
format = ["black", "isort"]
test = "pytest tests"
