[project]
name = "ta-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "himura467",email = "mitarashidango0927@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.17"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "torch (>=2.0.0,<2.6.0)",
    "jax (>=0.6.1,<0.7.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "timesfm (>=1.2.9,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ta_ml", from = "src"}]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
poethepoet = "^0.34.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
mypy = "mypy --config-file ../mypy.ini ta_ml tests main.py gunicorn.conf.py"
flake8 = "flake8 --config ../.flake8 ta_ml tests main.py gunicorn.conf.py"
black = "black ta_ml tests main.py gunicorn.conf.py"
isort = "isort ta_ml tests main.py gunicorn.conf.py"
lint = ["mypy", "flake8"]
format = ["black", "isort"]
