[project]
name = "ta-qrcode"
version = "0.1.0"
description = ""
authors = [
    {name = "himura467",email = "mitarashidango0927@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ta_qrcode", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
